update for deploy

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,7 @@
 
 ftp.server.ip=47.74.68.107
-ftp.user=ftpuser
-ftp.pass=12345
+ftp.user=root
+ftp.pass=root
 ftp.server.http.prefix=http://img.happymmall.com/
 
 
