--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,7 +1,7 @@
 #db.driverLocation=C:\\Users\\yw850\\.m2\\repository\\mysql\\mysql-connector-java\\6.0.6\\mysql-connector-java-6.0.6.jar
 db.driverLocation=C:\\Users\\yw850\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.6\\mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/mmall
+db.url=jdbc:mysql://127.0.0.1:3306/mmall_learning
 db.username=root
 db.password=root
 
