update for deploy

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=13.59.245.201
 ftp.user=ftpuser
 ftp.pass=12345
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.yw850.com/
 
 
 alipay.callback.url=http://33f4c5e1.ngrok.io/order/alipay_callback.do
