--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -5,7 +5,7 @@ ftp.pass=12345
 ftp.server.http.prefix=http://img.yw850.com/
 
 
-alipay.callback.url=http://33f4c5e1.ngrok.io/order/alipay_callback.do
+alipay.callback.url=http://yw850.com/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
