switch to alipay callback address

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -5,6 +5,7 @@ ftp.pass=12345
 ftp.server.http.prefix=http://img.yw850.com/
 
 
+#alipay.callback.url=http://11d42b2b.ngrok.io/order/alipay_callback.do
 alipay.callback.url=http://yw850.com/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
